
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2008-04-28

	* Added maildir training info to English and French FAQs.
	  Thanks to Karl Schmidt and to Mouss.

	2008-04-26

	* Fix uninitialized variable in lexer.c when unicode is disabled.
	  Patch provided by Roman Trunov.

	2008-04-20

	* In process_arg functions use the val parameter rather than optarg.
	  Patch provided by Roman Trunov.

	2008-04-18

	* Function process_arg now has the same prototype for
	  bogofilter, bogolexer, bogoutil, and bogotune.  The proper
	  version is called by function read_config_file for all
	  programs.  Problem reported by Roman Trunov.

	2008-04-17

	* Update Doxyfile for doxygen v1.5.5

	2008-04-16

	* Fixed syntax errors in t.valgrind test

	2008-03-21

	* bf_compact now supports compacting databases that use QDBM, Tokyo
	  Cabinet or SQLite3 and is covered by the test suite.

	2008-03-19

	* bf_compact now verifies databases before dumping them, to avoid
	  getting into an unterminated loop and wasting all diskspace.

	* Bogoupgrade now verifies databases before dumping them, to avoid
	  getting into an unterminated loop and burning all memory or disk
	  space when the database is corrupt.
	  This should fix Debian Bug#226643 and Debian Bug#226646.

	* Bogoupgrade now uses Pod::Usage to print usage/help, prints error
	  messages that are a bit more concise and validates arguments a bit
	  stricter.

	2008-02-08

	* Bump required sqlite version to 3.5.4, earlier versions could
	  sometimes corrupt the database. Update install-staticdblibs.sh.
	  Bogofilter will complain when used with older versions.

	2008-01-05
